# AuthManagement

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20250406085439_create_application_creation.sql  20250406085641_create_org_table.sql  20250406090127_create_user_table.sql  20250406090529_create_roles_table.sql  20250406103320_create_perms_table.sql
src/: main.rs
src/config/: database.rs
src/routes/: app.rs
