[package]
name = "auth_management"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
dotenvy = "0.15.7"
env_logger = "0.11"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version="0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
